# py-http-adapter-proxy

./: README.md  pyproject.toml
http_adapter_proxy/: __main__.py  client.py  proto.py  serialize.py  server.py
