[tool.poetry]
name = "http_adapter_proxy"
version = "0.1.0"
description = "Used to put http/https requests (sent by requests module) from different processes into queues"
authors = ["Hagb <hagb_green@qq.com>"]
license = "AGPLv3"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2"
gevent = "^21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
